--- a/tasks/install_client.yml
+++ b/tasks/install_client.yml
@@ -4,9 +4,14 @@
   set_fact:
     _minio_client_download_url: "https://dl.minio.io/client/mc/release/linux-{{ go_arch }}/archive/mc.{{ minio_mc_version }}"
 
-- name: Get the Minio client checksum for architecture {{ go_arch }}
+- name: Get the MinIO client checksum (remote curl)
+  shell: "curl -sL {{ _minio_client_download_url }}.sha256sum | awk '{print $1}'"
+  register: mc_checksum
+  changed_when: false
+
+- name: Store checksum fact
   set_fact:
-    _minio_client_checksum: "{{ lookup('url', _minio_client_download_url + '.sha256sum').split(' ')[0] }}"
+    _minio_client_checksum: "{{ mc_checksum.stdout }}"
 
 - name: Download the Minio client
   get_url:
