--- a/tasks/install_client.yml
+++ b/tasks/install_client.yml
@@ -1,27 +1,24 @@
----
-
-- name: Compose the Minio client download base url
+- name: Define MinIO client package path
   set_fact:
-    _minio_client_download_url: "https://dl.minio.io/client/mc/release/linux-{{ go_arch }}/archive/mc.{{ minio_mc_version }}"
+    _minio_client_deb_path: "{{ minio_installer_dir }}/minio-client.deb"
 
-- name: Get the MinIO client checksum (remote curl)
-  shell: "curl -sL {{ _minio_client_download_url }}.sha256sum | awk '{print $1}'"
-  register: mc_checksum
-  changed_when: false
+- name: Ensure MinIO installer directory exists
+  file:
+    path: "{{ minio_installer_dir }}"
+    state: directory
+    mode: "0755"
 
-- name: Store checksum fact
-  set_fact:
-    _minio_client_checksum: "{{ mc_checksum.stdout }}"
-
-- name: Download the Minio client
+- name: Download the MinIO client package
   get_url:
-    url: "{{ _minio_client_download_url }}"
-    dest: "{{ minio_client_bin }}"
-    owner: "root"
-    group: "root"
-    mode: 0755
-    checksum: "sha256:{{ _minio_client_checksum }}"
-  register: _download_client
-  until: _download_client is succeeded
+    url: "{{ minio_client_deb_url }}"
+    dest: "{{ _minio_client_deb_path }}"
+    mode: "0644"
+  register: _download_client_package
+  until: _download_client_package is succeeded
   retries: 5
   delay: 2
+
+- name: Install MinIO client package
+  apt:
+    deb: "{{ _minio_client_deb_path }}"
+    state: present
