--- a/tasks/install_server.yml
+++ b/tasks/install_server.yml
@@ -1,17 +1,28 @@
----
-
-- name: Compose the Minio server download url
+- name: Define MinIO server package path
   set_fact:
-    _minio_server_download_url: "https://dl.minio.io/server/minio/release/linux-{{ go_arch }}/archive/minio.{{ minio_server_version }}"
+    _minio_server_deb_path: "{{ minio_installer_dir }}/minio-server.deb"
 
-- name: Get the Minio server checksum for architecture {{ go_arch }}
-  shell: "curl -s {{ _minio_server_download_url }}.sha256sum | awk '{print $1}'"
-  register: minio_checksum
-  changed_when: false
+- name: Ensure MinIO installer directory exists
+  file:
+    path: "{{ minio_installer_dir }}"
+    state: directory
+    mode: "0755"
 
-- name: Store checksum fact
-  set_fact:
-    _minio_server_checksum: "{{ minio_checksum.stdout }}"
+- name: Download the MinIO server package
+  get_url:
+    url: "{{ minio_server_deb_url }}"
+    dest: "{{ _minio_server_deb_path }}"
+    mode: "0644"
+  register: _download_server_package
+  until: _download_server_package is succeeded
+  retries: 5
+  delay: 2
+
+- name: Install MinIO server package
+  apt:
+    deb: "{{ _minio_server_deb_path }}"
+    state: present
+  notify: Restart minio
 
 - name: Create Minio group
   group:
@@ -46,20 +57,6 @@
     mode: 0750
   when: minio_server_make_datadirs
   with_items: "{{ minio_server_datadirs }}"
-
-- name: Download the Minio server
-  get_url:
-    url: "{{ _minio_server_download_url }}"
-    dest: "{{ minio_server_bin }}"
-    owner: "root"
-    group: "root"
-    mode: 0755
-    checksum: "sha256:{{ _minio_server_checksum }}"
-  register: _download_server
-  until: _download_server is succeeded
-  retries: 5
-  delay: 2
-  notify: Restart minio
 
 - name: Generate the Minio server envfile
   template:
