--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -15,7 +15,7 @@ minio_server_datadirs:
 minio_server_cluster_nodes: []
 
 # minio bin path
-minio_server_bin: /usr/local/bin/minio
+minio_server_bin: "/usr/local/bin/minio"
 minio_client_bin: /usr/local/bin/mc
 
 # mino server config dirs
